2012-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-941021-1.c:
	  Disable test for gcc older than 5.0.

2012-03-22 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: double underlined keywords,
	  fixed bug #3510011 - Wrong keyword
	* src/sdcc.vcxproj, src/sdcc.vcxproj.filters:
	  added some missing header files

2012-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c (initCSupport, typeFromStr, printTypeChainRaw),
	  src/SDCCopt.c (cnvToFloatCast, cnvToFixed16x16Cast, cnvFromFloatCast, 
	  cnvFromFixed16x16Cast, convilong): ongoing upgrades for long long type

2012-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (transferAopAop): fixed bug 3509707
	* support/regression/tests/gcc-torture-execute-930603-1.c: reenabled

2012-03-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-92*,
	  support/regression/tests/gcc-torture-execute-93*,
	  support/regression/tests/gcc-torture-execute-94*:
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/mcs51/gen.c, src/SDCCasm.c, src/SDCCasm.h, src/z80/gen.c,
	  src/SDCCutil.c, src/ds390/gen.c, src/hc08/gen.c:
	  code cleaning, optimization, ...

2012-03-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/stdint.h,
	  device/include/string.h,
	  device/include/stddef.h,
	  device/include/stdlib.h,
	  device/include/stdio.h,
	  device/include/time.h,
	  device/include/errno.h:
	  rsize_t, errno_t, constraint_handler_t, RSIZE_MAX from annex K (bounds-checking) of the C11 standard.

2012-03-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCC.lex, doc/sdccman.lyx: removed asm() pseudo function
	  since it is not standard-compliant

2012-03-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
